# bitcoin-node-rust

./: Cargo.toml  client.conf  server.conf  style.css
src/: main.rs
src/components/: block.rs  block_header.rs  transaction.rs  user.rs  utxo_set.rs  utxo_struct.rs  wallet.rs
src/configuration/: config_helper.rs  configuration_loader.rs
src/connection/: connection_modes.rs  connection_protocol.rs
src/helpers/: auxiliar_functions.rs  persistance.rs
src/interface/: interfaz_grafica.rs  window.glade  window.glade~
src/logger/: log_printer.rs  logger_impl.rs
src/merkle_tree/: merkle_tree_calculator.rs
src/testnet_protocol/: block_download.rs  broadcasting.rs  header_download.rs  mod.rs
src/testnet_protocol/client_handlers/: handle_getdata.rs  handle_getheaders.rs  tests.rs
src/testnet_protocol/messages/: message_builders.rs  message_parsers.rs  message_senders.rs
