[package]
name = "tp-bitcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.11.0"
gtk = "0.17.1"
gio = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8.5"
bs58 = "0.5.0"
secp256k1 = "0.27.0"
k256 = "0.13.1 "
elliptic-curve= "0.13.5"